# proyecto_ventas

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  cleanup_migration.py  create_admin.py  debug_stock.py  entrypoint.sh  list_tables.py  purge_data.py  pyproject.toml  reproduce_issue.py  verify_security.py
backend/alembic/: env.py
backend/alembic/versions/: 2e4d47d8c88e_add_cost_management.py  3130a4f1fa4f_add_product_type_to_products.py  370ee1ffa806_add_custom_permissions.py  3835f626af6e_add_suppliers.py  41911e37f0fb_add_min_stock_level.py  426cb832c212_add_sale_customer_id.py  4e9bfd44ef10_add_supplier_id_to_stock_movements.py  58b9918a9b04_add_product_measurement_sizing.py  5fa8d6bcbc4a_initial_tables.py  755249c03e1d_decouple_costs_module.py  7ac6cd70ce45_add_iam_users.py  983e7f8d9f7b_add_fiscal_snapshot_to_documents.py  ae004ff41f1a_sales_invoicing.py  b206de9e9f1a_picking_and_barcodes.py  b400e7badd96_add_system_settings_table.py  bd5658c44825_make_payment_customer_id_nullable.py  c3b6f22bd31d_payments_ar.py  cd5fee14e6a9_add_product_uom_fixed.py  d01ade3d96bf_add_cost_fields_to_product.py  d38a423a598a_add_manufacture_date_to_batches.py  d5f4a4e5dfb8_product_suppliers_m2m.py  (+1 more)
backend/app/: main.py  module_registry.py
backend/core/: config.py  database.py
backend/tests/: test_customer_analytics.py  test_low_stock_config.py  test_low_stock_fix.py  test_main.py  test_sales_analytics.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage3_5.py  test_stock_adjustments.py  test_suppliers.py
(+125 files in other folders)
